@startuml

title __CUSTOM_VIEW's Class Diagram__\n

  namespace com.example.lib_common_ui {
    namespace custom_view {
      class com.example.lib_common_ui.custom_view.MyCircleView {
          - RATIO : float
          - bigCirclePaint : Paint
          - bigCircleRadius : int
          - bitmapPaint : Paint
          - centerX : int
          - centerY : int
          - iconSrc : Drawable
          - mDestRect : Rect
          - mSrcRect : Rect
          - resource : Bitmap
          - resourceHeight : int
          - resourceWidth : int
          - smallCirclePaint : Paint
          - smallCircleRadius : float
          - viewHeight : int
          - viewWidth : int
          + MyCircleView()
          + MyCircleView()
          + MyCircleView()
          + drawableToBitmap()
          # onDraw()
          # onMeasure()
          # onSizeChanged()
          - init()
          - initAttrs()
          - initBitmap()
          - initPaint()
      }
    }
  }
  

  namespace com.example.lib_common_ui {
    namespace custom_view {
      class com.example.lib_common_ui.custom_view.ShadowLayout {
          {static} - DEFAULT_SHADOW_ANGLE : float
          {static} - DEFAULT_SHADOW_COLOR : int
          {static} - DEFAULT_SHADOW_DISTANCE : float
          {static} - DEFAULT_SHADOW_RADIUS : float
          {static} - MAX_ALPHA : int
          {static} - MAX_ANGLE : float
          {static} - MIN_ANGLE : float
          {static} - MIN_RADIUS : float
          - mBitmap : Bitmap
          - mBounds : Rect
          - mCanvas : Canvas
          - mInvalidateShadow : boolean
          - mIsShadowed : boolean
          - mPaint : Paint
          - mShadowAlpha : int
          - mShadowAngle : float
          - mShadowColor : int
          - mShadowDistance : float
          - mShadowDx : float
          - mShadowDy : float
          - mShadowRadius : float
          + ShadowLayout()
          + ShadowLayout()
          + ShadowLayout()
          + getShadowAngle()
          + getShadowColor()
          + getShadowDistance()
          + getShadowDx()
          + getShadowDy()
          + getShadowRadius()
          + isShadowed()
          + requestLayout()
          + setIsShadowed()
          + setShadowAngle()
          + setShadowColor()
          + setShadowDistance()
          + setShadowRadius()
          # dispatchDraw()
          # onDetachedFromWindow()
          # onMeasure()
          - adjustShadowAlpha()
          - resetShadow()
      }
    }
  }
  

  com.example.lib_common_ui.custom_view.MyCircleView -up-|> androidx.appcompat.widget.AppCompatImageButton
  com.example.lib_common_ui.custom_view.ShadowLayout -up-|> android.widget.FrameLayout


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
